# autoscan

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_cli.py  setup.sh
.github/workflows/: ci.yml
configs/: cis_linux_rules.yaml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.css  App.tsx
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  SECURITY.md
src/: __init__.py
src/api/: __init__.py  main.py
src/cli/: __init__.py  main.py
src/compliance/: __init__.py  cis_benchmarks.py  policy_engine.py
src/config_analyzer/: __init__.py  system_hardening.py
src/core/: config.py  database.py  logger.py  models.py  remote_executor.py  scanner.py
src/vulnerability/: __init__.py  cve_scanner.py
tests/: __init__.py  test_compliance.py  test_config_analyzer.py  test_scanner.py  test_vulnerability.py
